--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(learn_c++04)
 add_subdirectory(learn_c++05)
 add_subdirectory(learn_c++06)
 add_subdirectory(learn_c++07)
+add_subdirectory(learn_c++08)
