--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(learn_c++05)
 add_subdirectory(learn_c++06)
 add_subdirectory(learn_c++07)
 add_subdirectory(learn_c++08)
+add_subdirectory(learn_c++09)
