--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,7 @@ add_subdirectory(learn_c++06)
 add_subdirectory(learn_c++07)
 add_subdirectory(learn_c++08)
 add_subdirectory(learn_c++09)
+add_subdirectory(learn_c++10)
+add_subdirectory(learn_c++11)
+add_subdirectory(learn_c++12)
+add_subdirectory(learn_c++13)
