--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(learn_c++10)
 add_subdirectory(learn_c++11)
 add_subdirectory(learn_c++12)
 add_subdirectory(learn_c++13)
+add_subdirectory(learn_c++14)
