2025/7/31 10:57 做完多维数组之前的练习

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(LearnC__)
 # 设置c++编译标准
 set(CMAKE_CXX_STANDARD 20)
 
+add_subdirectory(exercise)
 add_subdirectory(learn_c++00)
 add_subdirectory(learn_c++03)
 add_subdirectory(learn_c++04)
