--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(learn_c++15)
 add_subdirectory(learn_c++16)
 add_subdirectory(learn_c++17)
 add_subdirectory(learn_c++18)
+add_subdirectory(learn_c++19)
