--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ add_subdirectory(learn_c++16)
 add_subdirectory(learn_c++17)
 add_subdirectory(learn_c++18)
 add_subdirectory(learn_c++19)
+add_subdirectory(learn_c++20)
