--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory(learn_c++17)
 add_subdirectory(learn_c++18)
 add_subdirectory(learn_c++19)
 add_subdirectory(learn_c++20)
+add_subdirectory(learn_c++21)
