--- a/exercise/CMakeLists.txt
+++ b/exercise/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(work7 work7.cpp)
 add_executable(work8 work8.cpp)
 add_executable(work9 work9.cpp)
 add_executable(work10 work10.cpp)
+add_executable(work11 work11.cpp)
