--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(learn_c++18)
 add_subdirectory(learn_c++19)
 add_subdirectory(learn_c++20)
 add_subdirectory(learn_c++21)
+add_subdirectory(learn_c++22)
