--- a/learn_c++22/CMakeLists.txt
+++ b/learn_c++22/CMakeLists.txt
@@ -1,1 +1,7 @@
-add_executable(learn_c++22 main.cpp)
+add_executable(learn_c++22 main.cpp
+        Student.cpp
+        Student.h
+        DynamicArray.cpp
+        DynamicArray.h
+        MemoryPool.cpp
+        MemoryPool.h)
