--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,4 @@ add_subdirectory(learn_c++19)
 add_subdirectory(learn_c++20)
 add_subdirectory(learn_c++21)
 add_subdirectory(learn_c++22)
+add_subdirectory(learn_c++23)
