--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,29 +5,11 @@ project(LearnC__)
 # 设置c++编译标准
 set(CMAKE_CXX_STANDARD 20)
 
-add_subdirectory(exercise1)
-add_subdirectory(exercise2)
-add_subdirectory(learn_c++00)
-add_subdirectory(learn_c++03)
-add_subdirectory(learn_c++04)
-add_subdirectory(learn_c++05)
-add_subdirectory(learn_c++06)
-add_subdirectory(learn_c++07)
-add_subdirectory(learn_c++08)
-add_subdirectory(learn_c++09)
-add_subdirectory(learn_c++10)
-add_subdirectory(learn_c++11)
-add_subdirectory(learn_c++12)
-add_subdirectory(learn_c++13)
-add_subdirectory(learn_c++14)
-add_subdirectory(learn_c++15)
-add_subdirectory(learn_c++16)
-add_subdirectory(learn_c++17)
-add_subdirectory(learn_c++18)
-add_subdirectory(learn_c++19)
-add_subdirectory(learn_c++20)
-add_subdirectory(learn_c++21)
-add_subdirectory(learn_c++22)
-add_subdirectory(learn_c++23)
-add_subdirectory(learn_c++24)
-
+# 所有子目录都遵循 exercise* 和 learn_c++* 的模式
+file(GLOB subdirs LIST_DIRECTORIES true RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
+foreach(subdir ${subdirs})
+    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${subdir} AND
+    (subdir MATCHES "^exercise[0-9]+$" OR subdir MATCHES "^learn_c\\+\\+[0-9]+$"))
+        add_subdirectory(${subdir})
+    endif()
+endforeach()
