--- a/exercise2/CMakeLists.txt
+++ b/exercise2/CMakeLists.txt
@@ -1,3 +1,7 @@
 add_executable(exercise2 main.cpp
         MyString.cpp
-        MyString.h)
+        MyString.h
+        DynamicArray.cpp
+        DynamicArray.h
+        MemoryPool.cpp
+        MemoryPool.h)
